src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) void dnn_ClassificationModel_Delete(void* self);
extern "C" __declspec(dllexport) void* dnn_ClassificationModel_New_0(const char* model, const char* config);
extern "C" __declspec(dllexport) void* dnn_ClassificationModel_New_1(void* network);
extern "C" __declspec(dllexport) void* dnn_ClassificationModel_setEnableSoftmaxPostProcessing_0(void* self, bool enable);
extern "C" __declspec(dllexport) bool dnn_ClassificationModel_getEnableSoftmaxPostProcessing_0(void* self);
extern "C" __declspec(dllexport) void dnn_ClassificationModel_classify_0(void* self, void* frame, int classId, float conf);
extern "C" __declspec(dllexport) void dnn_DetectionModel_Delete(void* self);
extern "C" __declspec(dllexport) void* dnn_DetectionModel_New_0(const char* model, const char* config);
extern "C" __declspec(dllexport) void* dnn_DetectionModel_New_1(void* network);
extern "C" __declspec(dllexport) void* dnn_DetectionModel_setNmsAcrossClasses_0(void* self, bool value);
extern "C" __declspec(dllexport) bool dnn_DetectionModel_getNmsAcrossClasses_0(void* self);
extern "C" __declspec(dllexport) void dnn_DetectionModel_detect_0(void* self, void* frame, void* classIds, void* confidences, void* boxes, float confThreshold, float nmsThreshold);
extern "C" __declspec(dllexport) void dnn_Dict_Delete(void* self);
extern "C" __declspec(dllexport) void* dnn_Dict_New_0();
extern "C" __declspec(dllexport) void dnn_DictValue_Delete(void* self);
extern "C" __declspec(dllexport) void* dnn_DictValue_New_0(int i);
extern "C" __declspec(dllexport) void* dnn_DictValue_New_1(double p);
extern "C" __declspec(dllexport) void* dnn_DictValue_New_2(const char* s);
extern "C" __declspec(dllexport) bool dnn_DictValue_isInt_0(void* self);
extern "C" __declspec(dllexport) bool dnn_DictValue_isString_0(void* self);
extern "C" __declspec(dllexport) bool dnn_DictValue_isReal_0(void* self);
extern "C" __declspec(dllexport) int dnn_DictValue_getIntValue_0(void* self, int idx);
extern "C" __declspec(dllexport) double dnn_DictValue_getRealValue_0(void* self, int idx);
extern "C" __declspec(dllexport) const char* dnn_DictValue_getStringValue_0(void* self, int idx);
extern "C" __declspec(dllexport) void dnn_Image2BlobParams_Delete(void* self);
extern "C" __declspec(dllexport) void* dnn_Image2BlobParams_New_0();
extern "C" __declspec(dllexport) void* dnn_Image2BlobParams_New_1(cv::Scalar scalefactor, cv::Size size, cv::Scalar mean, bool swapRB, int ddepth, int datalayout, int mode, cv::Scalar borderValue);
extern "C" __declspec(dllexport) cv::Rect dnn_Image2BlobParams_blobRectToImageRect_0(void* self, cv::Rect rBlob, cv::Size size);
extern "C" __declspec(dllexport) void dnn_Image2BlobParams_blobRectsToImageRects_0(void* self, void* rBlob, void* rImg, cv::Size size);
extern "C" __declspec(dllexport) cv::Scalar dnn_Image2BlobParams_scalefactor_get(void* self);
extern "C" __declspec(dllexport) void dnn_Image2BlobParams_scalefactor_set(void* self, cv::Scalar val);
extern "C" __declspec(dllexport) cv::Size dnn_Image2BlobParams_size_get(void* self);
extern "C" __declspec(dllexport) void dnn_Image2BlobParams_size_set(void* self, cv::Size val);
extern "C" __declspec(dllexport) cv::Scalar dnn_Image2BlobParams_mean_get(void* self);
extern "C" __declspec(dllexport) void dnn_Image2BlobParams_mean_set(void* self, cv::Scalar val);
extern "C" __declspec(dllexport) bool dnn_Image2BlobParams_swapRB_get(void* self);
extern "C" __declspec(dllexport) void dnn_Image2BlobParams_swapRB_set(void* self, bool val);
extern "C" __declspec(dllexport) int dnn_Image2BlobParams_ddepth_get(void* self);
extern "C" __declspec(dllexport) void dnn_Image2BlobParams_ddepth_set(void* self, int val);
extern "C" __declspec(dllexport) int dnn_Image2BlobParams_datalayout_get(void* self);
extern "C" __declspec(dllexport) void dnn_Image2BlobParams_datalayout_set(void* self, int val);
extern "C" __declspec(dllexport) void* dnn_Image2BlobParams_paddingmode_get(void* self);
extern "C" __declspec(dllexport) void dnn_Image2BlobParams_paddingmode_set(void* self, void* val);
extern "C" __declspec(dllexport) cv::Scalar dnn_Image2BlobParams_borderValue_get(void* self);
extern "C" __declspec(dllexport) void dnn_Image2BlobParams_borderValue_set(void* self, cv::Scalar val);
extern "C" __declspec(dllexport) void dnn_KeypointsModel_Delete(void* self);
extern "C" __declspec(dllexport) void* dnn_KeypointsModel_New_0(const char* model, const char* config);
extern "C" __declspec(dllexport) void* dnn_KeypointsModel_New_1(void* network);
extern "C" __declspec(dllexport) void* dnn_KeypointsModel_estimate_0(void* self, void* frame, float thresh);
extern "C" __declspec(dllexport) void dnn_Layer_Delete(void* self);
extern "C" __declspec(dllexport) void dnn_Layer_finalize_0(void* self, void* inputs, void* outputs);
extern "C" __declspec(dllexport) void dnn_Layer_run_0(void* self, void* inputs, void* outputs, void* internals);
extern "C" __declspec(dllexport) int dnn_Layer_outputNameToIndex_0(void* self, const char* outputName);
extern "C" __declspec(dllexport) void* dnn_Layer_blobs_get(void* self);
extern "C" __declspec(dllexport) void dnn_Layer_blobs_set(void* self, void* val);
extern "C" __declspec(dllexport) const char* dnn_Layer_name_get(void* self);
extern "C" __declspec(dllexport) void dnn_Layer_name_set(void* self, const char* val);
extern "C" __declspec(dllexport) const char* dnn_Layer_type_get(void* self);
extern "C" __declspec(dllexport) void dnn_Layer_type_set(void* self, const char* val);