src/OpenCV5Sharp/Generated/NativeMethods.Dnn.cs


namespace OpenCV5Sharp
{
    internal static partial class NativeMethods
    {
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_ClassificationModel_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_ClassificationModel_New_0([MarshalAs(UnmanagedType.LPUTF8Str)] string? model, [MarshalAs(UnmanagedType.LPUTF8Str)] string? config);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_ClassificationModel_New_1(IntPtr network);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_ClassificationModel_setEnableSoftmaxPostProcessing_0(DnnClassificationModelHandle self, [MarshalAs(UnmanagedType.U1)] bool enable);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool dnn_ClassificationModel_getEnableSoftmaxPostProcessing_0(DnnClassificationModelHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_ClassificationModel_classify_0(DnnClassificationModelHandle self, MatHandle frame, int classId, float conf);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_DetectionModel_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_DetectionModel_New_0([MarshalAs(UnmanagedType.LPUTF8Str)] string? model, [MarshalAs(UnmanagedType.LPUTF8Str)] string? config);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_DetectionModel_New_1(IntPtr network);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_DetectionModel_setNmsAcrossClasses_0(DnnDetectionModelHandle self, [MarshalAs(UnmanagedType.U1)] bool value);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool dnn_DetectionModel_getNmsAcrossClasses_0(DnnDetectionModelHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_DetectionModel_detect_0(DnnDetectionModelHandle self, MatHandle frame, IntPtr classIds, IntPtr confidences, IntPtr boxes, float confThreshold, float nmsThreshold);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Dict_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_Dict_New_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_DictValue_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_DictValue_New_0(int i);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_DictValue_New_1(double p);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_DictValue_New_2([MarshalAs(UnmanagedType.LPUTF8Str)] string? s);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool dnn_DictValue_isInt_0(DnnDictValueHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool dnn_DictValue_isString_0(DnnDictValueHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool dnn_DictValue_isReal_0(DnnDictValueHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int dnn_DictValue_getIntValue_0(DnnDictValueHandle self, int idx);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double dnn_DictValue_getRealValue_0(DnnDictValueHandle self, int idx);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_DictValue_getStringValue_0(DnnDictValueHandle self, int idx);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Image2BlobParams_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_Image2BlobParams_New_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_Image2BlobParams_New_1(Scalar scalefactor, Size size, Scalar mean, [MarshalAs(UnmanagedType.U1)] bool swapRB, int ddepth, int datalayout, int mode, Scalar borderValue);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern Rect dnn_Image2BlobParams_blobRectToImageRect_0(DnnImage2BlobParamsHandle self, Rect rBlob, Size size);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Image2BlobParams_blobRectsToImageRects_0(DnnImage2BlobParamsHandle self, IntPtr rBlob, IntPtr rImg, Size size);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern Scalar dnn_Image2BlobParams_scalefactor_get(DnnImage2BlobParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Image2BlobParams_scalefactor_set(DnnImage2BlobParamsHandle self, Scalar val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern Size dnn_Image2BlobParams_size_get(DnnImage2BlobParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Image2BlobParams_size_set(DnnImage2BlobParamsHandle self, Size val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern Scalar dnn_Image2BlobParams_mean_get(DnnImage2BlobParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Image2BlobParams_mean_set(DnnImage2BlobParamsHandle self, Scalar val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool dnn_Image2BlobParams_swapRB_get(DnnImage2BlobParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Image2BlobParams_swapRB_set(DnnImage2BlobParamsHandle self, [MarshalAs(UnmanagedType.U1)] bool val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int dnn_Image2BlobParams_ddepth_get(DnnImage2BlobParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Image2BlobParams_ddepth_set(DnnImage2BlobParamsHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int dnn_Image2BlobParams_datalayout_get(DnnImage2BlobParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Image2BlobParams_datalayout_set(DnnImage2BlobParamsHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int dnn_Image2BlobParams_paddingmode_get(DnnImage2BlobParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Image2BlobParams_paddingmode_set(DnnImage2BlobParamsHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern Scalar dnn_Image2BlobParams_borderValue_get(DnnImage2BlobParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Image2BlobParams_borderValue_set(DnnImage2BlobParamsHandle self, Scalar val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_KeypointsModel_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_KeypointsModel_New_0([MarshalAs(UnmanagedType.LPUTF8Str)] string? model, [MarshalAs(UnmanagedType.LPUTF8Str)] string? config);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_KeypointsModel_New_1(IntPtr network);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_KeypointsModel_estimate_0(DnnKeypointsModelHandle self, MatHandle frame, float thresh);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Layer_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Layer_finalize_0(DnnLayerHandle self, IntPtr inputs, IntPtr outputs);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Layer_run_0(DnnLayerHandle self, IntPtr inputs, IntPtr outputs, IntPtr internals);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int dnn_Layer_outputNameToIndex_0(DnnLayerHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? outputName);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_Layer_blobs_get(DnnLayerHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Layer_blobs_set(DnnLayerHandle self, IntPtr val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_Layer_name_get(DnnLayerHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Layer_name_set(DnnLayerHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_Layer_type_get(DnnLayerHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Layer_type_set(DnnLayerHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? val);
